<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/screenPadding"
    >

    <include layout="@layout/part_logo" />
    <TextView
        android:id="@+id/titleTextView"
        style="@style/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu" />
    <Button
        android:id="@+id/convertLengthButton"
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onToLengthScreen"
        android:text="@string/convert_length" />
    <Button
        android:id="@+id/convertTempButton"
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onToTemperatureScreen"
        android:text="@string/convert_temp" />
    <Button
        android:id="@+id/convertWeightButton"
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onToWeightScreen"
        android:text="@string/convert_weight" />
    <Button
        android:id="@+id/quitButton"
        style="@style/MenuButton"
        android:background="@color/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onQuit"
        android:text="@string/quit" />
    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end|bottom"
       android:text="@string/version"
        />

</LinearLayout>